--- a/ConditionGan.ipynb
+++ b/ConditionGan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ccfc7332-39a1-4674-83e3-40ca87434361",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "1fcc94d6-76af-482a-be87-68bd249af63f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Gnet\n",
     "class G(nn.Module):\n",
     "\n",
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ebd68132-62f6-4ddf-9dc5-b6529957c2ea",
    "metadata": {},
    "outputs": [],
@@ -131,7 +130,7 @@
     "    print(f\"noise_label shape: {noise_label.shape}\")\n",
     "    return noise_img, noise_label_one_hot\n",
     "\n",
-    "\n",
+    "@torch.no_grad()\n",
     "def save_result(g_net, path='./result.jpg'):\n",
     "    g_net.eval()\n",
     "    noise_img, noise_label = create_fake_label()\n",
@@ -139,13 +138,13 @@
     "    generated = g_net(noise_img, noise_label)\n",
     "    a = generated.reshape(generated.shape[0], 1, 28, 28)\n",
     "    print(f\"save img to {path}\")\n",
-    "    save_image(a, path, n_row=10)\n",
+    "    save_image(a, path, nrow=10)\n",
     "    g_net.train()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b41b5609-ad9e-471f-8db2-7fa05396f676",
    "metadata": {},
    "outputs": [],
@@ -247,10 +246,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0ede9194-323f-4c6a-a980-bcc909199070",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start training...\n",
+      "epoch: 0, G loss: 0.8836025727837324, D loss: 1.189028155320743\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/0-results.jpg\n",
+      "current epoch spent: 38.36737882345915\n",
+      "epoch: 1, G loss: 0.9482348340152423, D loss: 1.1387679982287036\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/1-results.jpg\n",
+      "current epoch spent: 38.01027618162334\n",
+      "epoch: 2, G loss: 1.1488081276543867, D loss: 0.9936815398588363\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/2-results.jpg\n",
+      "current epoch spent: 31.566024677827954\n",
+      "epoch: 3, G loss: 1.3548005796444695, D loss: 0.8625306385412399\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/3-results.jpg\n",
+      "current epoch spent: 28.031240107491612\n",
+      "epoch: 4, G loss: 1.752256604145839, D loss: 0.5961957831563217\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/4-results.jpg\n",
+      "current epoch spent: 27.759739201515913\n",
+      "epoch: 5, G loss: 2.2097645004166724, D loss: 0.42888995398209295\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/5-results.jpg\n",
+      "current epoch spent: 27.950995597988367\n",
+      "epoch: 6, G loss: 2.4325500734325156, D loss: 0.3783855012167237\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/6-results.jpg\n",
+      "current epoch spent: 27.531239308416843\n",
+      "epoch: 7, G loss: 2.1435672236658108, D loss: 0.5275564225656646\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/7-results.jpg\n",
+      "current epoch spent: 27.389991618692875\n",
+      "epoch: 8, G loss: 1.4604405396020235, D loss: 0.8276956170352537\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/8-results.jpg\n",
+      "current epoch spent: 27.790271185338497\n",
+      "epoch: 9, G loss: 1.5484752883789128, D loss: 0.7733712288489474\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/9-results.jpg\n",
+      "current epoch spent: 27.40075084939599\n",
+      "epoch: 10, G loss: 1.660419410225679, D loss: 0.7212892334217201\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/10-results.jpg\n",
+      "current epoch spent: 27.396319694817066\n",
+      "epoch: 11, G loss: 1.5245974823864283, D loss: 0.7916500986512027\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/11-results.jpg\n",
+      "current epoch spent: 27.16180555149913\n",
+      "epoch: 12, G loss: 1.242451407253615, D loss: 1.0173196335082877\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/12-results.jpg\n",
+      "current epoch spent: 27.524524861946702\n",
+      "epoch: 13, G loss: 1.24324410556476, D loss: 0.9721631937698006\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/13-results.jpg\n",
+      "current epoch spent: 27.035219242796302\n",
+      "epoch: 14, G loss: 1.2891896603458217, D loss: 0.9449848106929234\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/14-results.jpg\n",
+      "current epoch spent: 27.297417264431715\n",
+      "epoch: 15, G loss: 1.3059310327206592, D loss: 0.9421380700460121\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/15-results.jpg\n",
+      "current epoch spent: 27.453746749088168\n",
+      "epoch: 16, G loss: 1.3338400641484047, D loss: 0.9125070405413093\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/16-results.jpg\n",
+      "current epoch spent: 27.24081370793283\n",
+      "epoch: 17, G loss: 1.38476757377958, D loss: 0.9005330773050597\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/17-results.jpg\n",
+      "current epoch spent: 27.21271699666977\n",
+      "epoch: 18, G loss: 1.4144382230254378, D loss: 0.873187574115135\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/18-results.jpg\n",
+      "current epoch spent: 27.34965719282627\n",
+      "epoch: 19, G loss: 1.420026634039401, D loss: 0.8716114148148087\n",
+      "noise_label shape: torch.Size([100])\n",
+      "save img to ././results/19-results.jpg\n",
+      "current epoch spent: 27.444291010499\n",
+      "Total training spent: 574.9174653328955\n"
+     ]
+    }
+   ],
    "source": [
     "g_net = G()\n",
     "g_net.to(device)\n",
@@ -263,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "22be4342-1ade-4b84-975a-eda4e8cf42ad",
    "metadata": {},
    "outputs": [],
